# maat

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MaatDox  Makefile.am  README.md  ROADMAP.md  configure.ac
contrib/copland-compiler/: .ocamlformat  Makefile  README.md  ccode.ml  copland_compiler.opam  dune-project  example.json  example.sexp  merge.ml  runasp.c  split.ml  state.ml  stdasps.sexp  typed_descrs.ml  workflow.ml
documentation/: .gitignore  Doxyfile.in  Makefile.am
documentation/source/: Makefile.am  am_desc.txt  apb_developer_guide.txt  apb_info.txt  apb_readme.md  asp_developer_guide.txt  asp_readme.md  basic_tutorial.txt  complex_attestation_tutorial.txt  conf.py.in  configure_selector_config_policy.txt  configuring_attestation_manager.txt  configuring_selector_policy.txt  doclinks.m4  index.txt  layered_tutorial.txt  maat_attestation_manager_ui_tutorial.md  maat_environment_variables.txt  maat_introduction.txt  maat_use_cases.txt  makeASPTable.py  measurement_specifications.txt  multirealm_tutorial.txt  parseAMs.py  parseAPBs.py  parseASPs.py  parseDoxTypes.py  parseMeas.py  passport_creation_tutorial.txt  passport_use_tutorial.txt  quick_start.txt  quick_start_maat_configuration.txt  readme.txt  security_fs_listing.txt  setup_multirealms.txt  types_info.txt  ui_tutorial.md  understanding_contracts.txt  understanding_maat_architecture.txt  understanding_maat_features.txt  (+2 more)
initscripts/: Makefile.am  README.md  maat.conf.in  maat.service.in  maat_mq_proxy.conf.in  maat_mq_proxy.service.in
lib/apb/: Makefile.am  apb.c  apb.h  apbmain.c  contracts.c  contracts.h
lib/asp/: Makefile.am  asp-api.h  aspmain.c
lib/client/: Makefile.am  maat-client.c  maat-client.h
lib/common/: Makefile.am  apb.c  apb_info.h  asp-errno.h  asp.c  asp.h  asp_info.c  asp_info.h  copland.c  copland.h  exe_sec_ctxt.c  exe_sec_ctxt.h  measurement_spec.c  measurement_spec.h  scenario.h  taint.h
lib/graph/: Makefile.am  graph-core.h  graph-fs-data.c  graph-fs-edges.c  graph-fs-nodes.c  graph-fs-private.h  graph-fs-util.c  graph-fs.c  graph-fs.h  graph-iteration.c  graph-serialization.c  graph-shell.c
lib/sgraph/: Makefile.am  README.md  address.c  api.c  data.c  edge.c  graph.c  json.c  node.c  query.c  sgraph.h  sgraph_internal.h
lib/test/: Makefile.am  dummy_apb.c  dummy_asp.c  dummy_types.c  dummy_types.h  test-data.h  test_am.c  test_am_apb.c  test_apb.c  test_client.c  test_csv.c  test_data.csv  test_everything.c  test_graph.c  test_graph_announcements.c  test_load_asps.c  test_marshall_data.c  test_measurement_spec.c  test_place_xml.c  test_sgraph.c  test_util.c
lib/util/: Makefile.am  base64.c  base64.h  checksum.c  checksum.h  compress.c  compress.h  crypto.c  crypto.h  csv.c  csv.h  glib-compat.c  hexlog.h  inet-socket.c  inet-socket.h  init.c  keyvalue.h  maat-io.c  maat-io.h  sign.c  sign.h  sign_tpm.c  sign_tpm.h  signfile.c  signfile.h  signvfy.h  tpm.c  tpm.h  unix-socket.c  unix-socket.h  util.c  util.h  validate.c  validate.h  xml_node_names.h  xml_util.c  xml_util.h
measurement-specs/: Makefile.am  deleg_meas_skeleton_mspec.xml  got_measure_mspec.xml  hashdir_mspec.xml  instruction_library.xml  layered_measurement_mspec.xml  mapping_mspec.xml  netstat_mspec.xml  passport_mspec.xml  proc_open_files_mspec.xml  quiot_tlm_day.xml  quiot_tlm_hour.xml  quiot_tlm_min.xml  quiot_tlm_tmin.xml  test_measurement_mspec.xml  userspace_elf_mspec.xml  userspace_hashfiles_mspec.xml  userspace_measurement_mspec.xml  userspace_packages_mspec.xml  userspace_processes_mspec.xml  verified_userspace_mspec.xml
pam/: Makefile.am  README  pam_svp.c
selinux/: Makefile.am  maat-default.te.in  maat-photon.te.in  maat.fc.in  maat.if  maat.te
src/am/: Makefile.am  addCertToDatabase.py  am.c  am.h  am_config.c  am_config.h  am_getopt.c  am_service.c  attestmgr-config.xml.in  attestmgr.c  attestmgrmain.c  contracts.c  contracts.h  copland_selector.c  demo_pam_to_db.py  libmaat_client.py  minimal-am-config.xml.in  mongo_selector.c  mq_client.py  mq_test_driver.py  org.AttestationManager.service.in  selector.c  selector.h  selector_impl.h  sighandling.c  sighandling.h  test_client.c  test_client.py  trusted-sock-am-config.xml.in  trusted-third-party-config.xml.in
src/apbs/: Doxyfile.in  Makefile.am  README.md  apb-common.c  apb-common.h  appraiser_apb.c  appraiser_apb.xml.in  complex_att_apb.c  complex_att_apb.xml.in  deleg_meas_appraise_skeleton_apb.c  deleg_meas_appraise_skeleton_apb.xml.in  deleg_meas_skeleton_apb.c  deleg_meas_skeleton_apb.xml.in  forwarding_apb.c  forwarding_apb.xml.in  hashdir_apb.c  hashdir_apb.xml.in  hashfile_apb.c  hashfile_apb.xml.in  iot_appraiser_apb.c  iot_appraiser_apb.xml.in  iot_uart_apb.c  iot_uart_apb.xml.in  kim_apb.c  kim_apb.xml.in  layered_appraiser_apb.c  layered_appraiser_apb.xml.in  layered_att_apb.c  layered_att_apb.xml.in  no_op_apb.c  no_op_apb.xml.in  passport_appraiser_apb.c  passport_appraiser_apb.xml.in  passport_ret_apb.c  passport_ret_apb.xml.in  passport_storage_apb.c  passport_storage_apb.xml.in  passport_userspace_appraiser_apb.c  passport_userspace_appraiser_apb.xml.in  process_measurement_apb.c  (+15 more)
src/asps/: Doxyfile.in  Makefile.am  README.md  asp_skeleton.c  asp_skeleton.xml.in  blacklist.c  blacklist.xml.in  compress_asp.c  compress_asp.xml.in  create_contract_asp.c  create_contract_asp.xml.in  create_measurement_contract_asp.c  create_measurement_contract_asp.xml.in  decompress_asp.c  decompress_asp.xml.in  decrypt_asp.c  decrypt_asp.xml.in  deleg_meas_appraise_skeleton_asp.c  deleg_meas_appraise_skeleton_asp.xml.in  deleg_meas_skeleton_asp.c  deleg_meas_skeleton_asp.xml.in  dpkg_check_asp.c  dpkg_check_asp.h  dpkg_check_asp.xml.in  dpkg_details_asp.c  dpkg_details_asp.xml.in  dpkg_inv_asp.c  dpkg_inv_asp.xml.in  dummy_appraisal.c  dummy_appraisal.xml.in  elf_appraise.c  elf_appraise.h  elf_appraise.xml.in  elf_reader.c  elf_reader.xml.in  encrypt_asp.c  encrypt_asp.xml.in  got_appraise.c  got_appraise.h  got_appraise.xml.in  (+110 more)
src/measurement_spec/: Makefile.am  measurement_spec.c  measurement_spec.h  measurement_spec.xsd  (+1 more)
(+422 files in other folders)
