#
# Copyright 2020 United States Government
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

include ../src/common.mk.am

dist_spec_DATA=hashdir_mspec.xml \
	instruction_library.xml \
	userspace_measurement_mspec.xml \
	mapping_mspec.xml \
	netstat_mspec.xml \
	proc_open_files_mspec.xml \
	test_measurement_mspec.xml \
	userspace_processes_mspec.xml \
	userspace_hashfiles_mspec.xml \
	userspace_mtab_mspec.xml \
	verified_userspace_mspec.xml \
	quiot_tlm_min.xml \
	quiot_tlm_day.xml \
	quiot_tlm_hour.xml \
	quiot_tlm_tmin.xml \
	userspace_packages_mspec.xml \
	got_measure_mspec.xml \
	passport_mspec.xml \
	layered_measurement_mspec.xml
